--- a/date/2024-12/page-2.htm
+++ b/date/2024-12/page-2.htm
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-33097.htm" title="RMI反序列化学习">RMI反序列化学习</a></li>
+                        <li class="py-2"><a href="/news/article-41847.htm" title="动物医院运营与管理 动物医院运营与管理pdf">动物医院运营与管理 动物医院运营与管理pdf</a></li>
+                        <li class="py-2"><a href="/news/article-37414.htm" title="开一个宠物零食工厂赚钱吗（开个宠物零食店需要多少钱）">开一个宠物零食工厂赚钱吗（开个宠物零食店需要多少钱）</a></li>
+                        <li class="py-2"><a href="/news/article-52962.htm" title="Vue生产环境调试的方法">Vue生产环境调试的方法</a></li>
+                        <li class="py-2"><a href="/news/article-56819.htm" title="AOT和单文件发布对程序性能的影响">AOT和单文件发布对程序性能的影响</a></li>
+                        <li class="py-2"><a href="/news/article-36329.htm" title="养猫***大概需要多少钱一针疫苗（养猫咪要打什么针大概多少钱）">养猫***大概需要多少钱一针疫苗（养猫咪要打什么针大概多少钱）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-7-node-share.htm" title="1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/news/article-44342.htm" title="时间与日期——瞬时（Instant）">时间与日期——瞬时（Instant）</a></li>
-                        <li class="py-2"><a href="/news/article-51909.htm" title="开宠物店亏本经历有哪些（开宠物店会亏本吗）">开宠物店亏本经历有哪些（开宠物店会亏本吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-12-free-node-subscribe-links.htm" title="2月12日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址">2月12日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-29-free-node-subscribe.htm" title="1月29日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">1月29日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-44834.htm" title="动物疫苗生产资质要求（动物疫苗生产资质要求是什么）">动物疫苗生产资质要求（动物疫苗生产资质要求是什么）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-30-node-share-links.htm" title="12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-7-free-subscribe-node.htm" title="2月7日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">2月7日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-42353.htm" title="简单宠物寄养协议（宠物店宠物寄养协议）">简单宠物寄养协议（宠物店宠物寄养协议）</a></li>
-                        <li class="py-2"><a href="/news/article-39378.htm" title="狗粮加工厂利润成本分析表模板怎么写（狗粮生产成本）">狗粮加工厂利润成本分析表模板怎么写（狗粮生产成本）</a></li>
+                        <li class="py-2"><a href="/news/article-37413.htm" title="厦门宠物领养贴吧群（厦门宠物领养厦门宠物赠送）">厦门宠物领养贴吧群（厦门宠物领养厦门宠物赠送）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-19-free-high-speed-nodes.htm" title="1月19日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">1月19日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-10-free-high-speed-nodes.htm" title="2月10日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址">2月10日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">36</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
