--- a/free-nodes/2025-2-12-free-node-subscribe-links.htm
+++ b/free-nodes/2025-2-12-free-node-subscribe-links.htm
@@ -145,6 +145,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://sockscap64.github.io/uploads/2025/02/0-20250212.yaml</p><p>https://sockscap64.github.io/uploads/2025/02/1-20250212.yaml</p><p>https://sockscap64.github.io/uploads/2025/02/3-20250212.yaml</p><p>https://sockscap64.github.io/uploads/2025/02/4-20250212.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://sockscap64.github.io/uploads/2025/02/0-20250212.txt</p><p>https://sockscap64.github.io/uploads/2025/02/2-20250212.txt</p><p>https://sockscap64.github.io/uploads/2025/02/3-20250212.txt</p><p>https://sockscap64.github.io/uploads/2025/02/4-20250212.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://sockscap64.github.io/uploads/2025/02/20250212.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://ccc.ssy614.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" rel="nofollow noopener" style="color:#c00;">山水云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-2-11-free-high-speed-nodes.htm">2月11日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-2-13-node-share-links.htm">2月13日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -173,16 +174,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-12-27-free-high-speed-nodes.htm" title="12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-55149.htm" title="宠物粮食加工厂怎么起步做生意呢赚钱吗（宠物粮食加工厂好做吗）">宠物粮食加工厂怎么起步做生意呢赚钱吗（宠物粮食加工厂好做吗）</a></li>
-                        <li class="py-2"><a href="/news/article-31679.htm" title="记-Windows环境下Prometheus+alertmanager+windows_exporter+mtail监控部署提起网关日志">记-Windows环境下Prometheus+alertmanager+windows_exporter+mtail监控部署提起网关日志</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-25-free-high-speed-nodes.htm" title="1月25日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址">1月25日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-29-free-node-subscribe-links.htm" title="12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-34518.htm" title="附近宠物收容中心（附近宠物收容中心电话）">附近宠物收容中心（附近宠物收容中心电话）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-1-free-high-speed-nodes.htm" title="2月1日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">2月1日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-52424.htm" title="学宠物医生上什么大学（学宠物医生上什么大学好）">学宠物医生上什么大学（学宠物医生上什么大学好）</a></li>
-                        <li class="py-2"><a href="/news/article-54596.htm" title="湖北宠物店城管打人（宠物店举报电话多少）">湖北宠物店城管打人（宠物店举报电话多少）</a></li>
-                        <li class="py-2"><a href="/news/article-33574.htm" title="Vue中引入静态资源的几种方式">Vue中引入静态资源的几种方式</a></li>
+                        <li class="py-2"><a href="/news/article-30136.htm" title="什么是Python高阶函数">什么是Python高阶函数</a></li>
+                        <li class="py-2"><a href="/news/article-37414.htm" title="开一个宠物零食工厂赚钱吗（开个宠物零食店需要多少钱）">开一个宠物零食工厂赚钱吗（开个宠物零食店需要多少钱）</a></li>
+                        <li class="py-2"><a href="/news/article-37892.htm" title="十大毒猫粮黑名单图片 十大毒猫粮排行榜">十大毒猫粮黑名单图片 十大毒猫粮排行榜</a></li>
+                        <li class="py-2"><a href="/news/article-41847.htm" title="动物医院运营与管理 动物医院运营与管理pdf">动物医院运营与管理 动物医院运营与管理pdf</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-26-free-subscribe-node.htm" title="1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-31-free-node-subscribe.htm" title="1月31日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月31日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-36929.htm" title="领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎">领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-18-free-node-subscribe-links.htm" title="1月18日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月18日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-40861.htm" title="适合穷人养的猫咪（适合穷人养的猫咪品种）">适合穷人养的猫咪（适合穷人养的猫咪品种）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-13-node-share-links.htm" title="2月13日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">2月13日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -194,7 +195,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">36</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
