--- a/index.html
+++ b/index.html
@@ -123,6 +123,48 @@
                 <div class="col-md-9">
                     <h2 style="font-size: 2rem;margin-bottom: 1.5rem;">最近更新</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-15">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-15-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="2月15日→22M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-15-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">2月15日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、新加坡、日本、美国、韩国、加拿大、欧洲等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-14">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-14-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/83fc4ed0956827536cee5316dc8ae409.webp" alt="2月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-14-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">2月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、美国、欧洲、日本、新加坡、香港、韩国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-13">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-13-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="2月13日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-13-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">2月13日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、美国、加拿大、日本、新加坡、香港、欧洲等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-02-12">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-2-12-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -361,48 +403,6 @@
                                     这一次的节点更新覆盖了日本、韩国、加拿大、欧洲、新加坡、美国、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-26">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-1-26-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-1-26-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、韩国、美国、加拿大、新加坡、香港、日本等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-25">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-1-25-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="1月25日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-1-25-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">1月25日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、欧洲、美国、加拿大、新加坡、韩国、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-24">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-1-24-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="1月24日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-1-24-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">1月24日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了韩国、香港、新加坡、日本、加拿大、美国、欧洲等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -412,16 +412,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-30245.htm" title="宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片">宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-7-free-subscribe-node.htm" title="2月7日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">2月7日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-34519.htm" title="宠物领养证如何办理流程图片及价格大全（宠物领养证书怎么办理）">宠物领养证如何办理流程图片及价格大全（宠物领养证书怎么办理）</a></li>
-                        <li class="py-2"><a href="/news/article-40366.htm" title="动物打疫苗肉还能吃吗有毒吗（动物打疫苗后多久能杀了吃）">动物打疫苗肉还能吃吗有毒吗（动物打疫苗后多久能杀了吃）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-2-free-node-subscribe-links.htm" title="2月2日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">2月2日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-54048.htm" title="动物医院主要工作（动物医院主要工作有哪些）">动物医院主要工作（动物医院主要工作有哪些）</a></li>
-                        <li class="py-2"><a href="/news/article-40367.htm" title="宠物口粮上市公司（宠物口粮上市公司有几家）">宠物口粮上市公司（宠物口粮上市公司有几家）</a></li>
-                        <li class="py-2"><a href="/news/article-49818.htm" title="让猫挠了几天之内打针有用吗（让猫挠了用打针么）">让猫挠了几天之内打针有用吗（让猫挠了用打针么）</a></li>
-                        <li class="py-2"><a href="/news/article-35255.htm" title="狗粮批发厂家联系方式查询（狗粮厂家批发中心）">狗粮批发厂家联系方式查询（狗粮厂家批发中心）</a></li>
-                        <li class="py-2"><a href="/news/article-55148.htm" title="宠物领养协议法律效力如何 宠物领养协议法律效力如何">宠物领养协议法律效力如何 宠物领养协议法律效力如何</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-28-free-node-subscribe-links.htm" title="1月28日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月28日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-30137.htm" title="学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）">学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）</a></li>
+                        <li class="py-2"><a href="/news/article-40861.htm" title="适合穷人养的猫咪（适合穷人养的猫咪品种）">适合穷人养的猫咪（适合穷人养的猫咪品种）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-9-free-subscribe-node.htm" title="2月9日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址">2月9日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-48779.htm" title="合肥宠物领养救助站电话地址（合肥宠物领养合肥宠物赠送）">合肥宠物领养救助站电话地址（合肥宠物领养合肥宠物赠送）</a></li>
+                        <li class="py-2"><a href="/news/article-36437.htm" title="一片枫叶简笔画图片（一片枫叶图片唯美意境）">一片枫叶简笔画图片（一片枫叶图片唯美意境）</a></li>
+                        <li class="py-2"><a href="/news/article-43835.htm" title="给动物打疫苗的简报 给动物打疫苗的简报怎么写">给动物打疫苗的简报 给动物打疫苗的简报怎么写</a></li>
+                        <li class="py-2"><a href="/news/article-32625.htm" title="北京爱宠怡康动物医院(梧桐店)（北京宠爱动物医院消费高吗）">北京爱宠怡康动物医院(梧桐店)（北京宠爱动物医院消费高吗）</a></li>
+                        <li class="py-2"><a href="/news/article-46314.htm" title="动物疫苗保存条件是什么样的（动物疫苗在常温下能放多久）">动物疫苗保存条件是什么样的（动物疫苗在常温下能放多久）</a></li>
+                        <li class="py-2"><a href="/news/article-39875.htm" title="CountDownLatch和CyclicBarrier：如何让多线程步调一致">CountDownLatch和CyclicBarrier：如何让多线程步调一致</a></li>
                     </ul>
     </div>
 </div>
@@ -433,7 +433,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">36</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
