--- a/privacy.htm
+++ b/privacy.htm
@@ -176,16 +176,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-54595.htm" title="动物防疫预防措施包括（动物防疫的重点措施有哪些）">动物防疫预防措施包括（动物防疫的重点措施有哪些）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-12-node-share-links.htm" title="1月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">1月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-46814.htm" title="动物医院诊疗许可证需要提供什么资料和手续 动物医院诊疗许可证需要提供什么资料和手续呢">动物医院诊疗许可证需要提供什么资料和手续 动物医院诊疗许可证需要提供什么资料和手续呢</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-27-free-high-speed-nodes.htm" title="12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-41846.htm" title="python开发HDFS">python开发HDFS</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-21-free-subscribe-node.htm" title="1月21日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址">1月21日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-37413.htm" title="厦门宠物领养贴吧群（厦门宠物领养厦门宠物赠送）">厦门宠物领养贴吧群（厦门宠物领养厦门宠物赠送）</a></li>
-                        <li class="py-2"><a href="/news/article-33096.htm" title="centos7-linux安装docker(离线方式)">centos7-linux安装docker(离线方式)</a></li>
-                        <li class="py-2"><a href="/news/article-40860.htm" title="免费领养宠物包邮吗现在（免费领养宠物送到家）">免费领养宠物包邮吗现在（免费领养宠物送到家）</a></li>
-                        <li class="py-2"><a href="/news/article-54048.htm" title="动物医院主要工作（动物医院主要工作有哪些）">动物医院主要工作（动物医院主要工作有哪些）</a></li>
+                        <li class="py-2"><a href="/news/article-35796.htm" title="k8s 部署pod到指定node">k8s 部署pod到指定node</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-8-free-high-speed-nodes.htm" title="1月8日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">1月8日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-30-node-share-links.htm" title="12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-37894.htm" title="动物疫苗接种后多久产生抗体了正常（动物疫苗打几次）">动物疫苗接种后多久产生抗体了正常（动物疫苗打几次）</a></li>
+                        <li class="py-2"><a href="/news/article-40367.htm" title="宠物口粮上市公司（宠物口粮上市公司有几家）">宠物口粮上市公司（宠物口粮上市公司有几家）</a></li>
+                        <li class="py-2"><a href="/news/article-44342.htm" title="时间与日期——瞬时（Instant）">时间与日期——瞬时（Instant）</a></li>
+                        <li class="py-2"><a href="/news/article-51909.htm" title="开宠物店亏本经历有哪些（开宠物店会亏本吗）">开宠物店亏本经历有哪些（开宠物店会亏本吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-23-node-share.htm" title="12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址">12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-48779.htm" title="合肥宠物领养救助站电话地址（合肥宠物领养合肥宠物赠送）">合肥宠物领养救助站电话地址（合肥宠物领养合肥宠物赠送）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-7-node-share.htm" title="1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -197,7 +197,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">36</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
